FIX UPGRADE SECTION: TEXT AND VIEW ON MOBILE

--- a/src/Components/DesignersSection/designersSection.css
+++ b/src/Components/DesignersSection/designersSection.css
@@ -66,13 +66,13 @@
         background-image: url(../../assets/designers-bg-mobile.png);                
         background-repeat: no-repeat;
         background-size: contain;           
-        height: 110vh;
+        height: 100%;
         justify-content: center;
         align-items: center;
     }
     .upgradeSection__Container{        
         width: 100%;
-        margin-top: 350px;        
+        padding-top: 450px;        
     }
     
 }
